RESOLVED FIXED19086
REGRESSION (r28519-r28535): Caret doesn't paint past the right edge of a block
https://bugs.webkit.org/show_bug.cgi?id=19086
Summary REGRESSION (r28519-r28535): Caret doesn't paint past the right edge of a block
mitz
Reported 2008-05-15 13:39:25 PDT
When the caret position is past the right edge of a block, it does not always paint (it paints when it moves or changes, but not when it should blink). This happens at the end of a line of right-aligned text (or the beginning of right-aligned RTL text). To reproduce: 1. Open the URL 2. Click near the top of the document 3. Type some text
Attachments
Revert part of r28523 (14.61 KB, patch)
2008-05-25 13:00 PDT, mitz
darin: review+
mitz
Comment 1 2008-05-25 10:14:51 PDT
mitz
Comment 2 2008-05-25 10:15:05 PDT
*** Bug 19244 has been marked as a duplicate of this bug. ***
mitz
Comment 3 2008-05-25 10:19:21 PDT
Probably a result of removing the padding in <http://trac.webkit.org/changeset/28523>.
David Kilzer (:ddkilzer)
Comment 4 2008-05-25 11:05:43 PDT
Internal autospade says: Works: r28519 Fails: r28535
mitz
Comment 5 2008-05-25 13:00:49 PDT
Created attachment 21339 [details] Revert part of r28523 This patch fixes the regression. Its weakness is that it only covers cases where the caret is within one pixel from the block, but I could not come up with a reasonable general solution. I am not sure that it is ever valid for the caret to be more than one pixel away from the block.
Darin Adler
Comment 6 2008-05-25 13:09:14 PDT
Comment on attachment 21339 [details] Revert part of r28523 + // Ensure that the dirty rect intersects the blcok that paints the caret even in the case where Typo "blcok". r=me
mitz
Comment 7 2008-05-25 13:15:02 PDT
Note You need to log in before you can comment on or make changes to this bug.