WebCore:

Reviewed by Darin Adler.

        - fix https://bugs.webkit.org/show_bug.cgi?id=19086
          <rdar://problem/5962254> REGRESSION (r28519-r28535): Caret doesn't paint past the right edge of a block

        Test: fast/repaint/caret-outside-block.html

        * editing/SelectionController.cpp:
        (WebCore::repaintRectForCaret): Restored this function which was removed
        in r28523, but changed it to inflate only the width.
        (WebCore::SelectionController::caretRepaintRect): Changed back to use
        repaintRectForCaret().
        (WebCore::SelectionController::recomputeCaretRect): Ditto.

LayoutTests:

        Reviewed by Darin Adler.

        - pixel test for https://bugs.webkit.org/show_bug.cgi?id=19086
          <rdar://problem/5962254> REGRESSION (r28519-r28535): Caret doesn't paint past the right edge of a block

        * fast/repaint/caret-outside-block.html: Added.
        * platform/mac/fast/repaint/caret-outside-block-expected.checksum: Added.
        * platform/mac/fast/repaint/caret-outside-block-expected.png: Added.
        * platform/mac/fast/repaint/caret-outside-block-expected.txt: Added.



Canonical link: https://commits.webkit.org/26634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34127 268f45cc-cd09-0410-ab3c-d52691b4dbfc